# kdx

./: .env.example  .gitattributes  .gitignore  README.md  deploy.sh  docker-compose-minio.yaml  docker-compose.yaml  generate_icon.py  generate_logo.py  start.sh  查找对话历史记录.md
.github/workflows/: deploy.yml
compose/mysql/conf/: my.cnf
compose/mysql/init/: init.sql
compose/nginx/: Dockerfile  default.conf
kdemo_fastapi/: Dockerfile  pyproject.toml
kdemo_fastapi/app/: main.py  voice_ws.py
kdx-be/: Dockerfile  pyproject.toml  requirements.txt  test-1104.py  uwsgi.ini
kdx-be/aistart/: query_tokens.py  views.py
kdx-be/baby/: access_views.py  album_views.py  baby_info_views.py  models.py  serializers.py  urls.py
kdx-be/baby/migrations/: 0043_alter_birthdayrecord_created_at_and_more.py
kdx-be/face/: __init__.py  admin.py  apps.py  fix_insightface.py  models.py  serializers.py  test_face_info.py  test_insightface.py  test_insightface_fixed.py  urls.py  views.py
kdx-be/face/migrations/: 0001_initial.py  0002_facerecognitionlog.py
kdx-be/face/services/: __init__.py  face_service.py
kdx-be/fileUpload/: views.py
kdx-be/kdemo/: celery.py  middleware.py  settings.py  urls.py  wsgi.py
kdx-be/scripts/: download_insightface_models.py
kdx-be/sms/: send_demo.py  send_demo2.py  test.py
kdx-be/utils/: chatApp.py
kdx-fe/: .env.development  .env.production  .gitignore  Dockerfile  package-lock.json  package.json  vue.config.js
kdx-fe/src/: main.js
kdx-fe/src/components/Upload/: SingleImage.vue  SingleImage3.vue
kdx-fe/src/store/modules/: user.js
kdx-fe/src/utils/: index.js  request.js
kdx-fe/src/views/ai/: index.vue
kdx-fe/src/views/baby/: album.vue  analysis.vue  babyPants.vue  backbreastfeed.vue  details.vue  growing.vue  sleep.vue  todo.vue
kdx-fe/src/views/login/: index.vue
kdx-ws-be/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
kdx-ws-be/app/: config.py  main.py  security.py  test.py
kdx-ws-be/app/api/: access_stats.py  deps.py  face.py  health.py  todo.py
kdx-ws-be/app/core/: config.py  database.py  logging.py  security.py
kdx-ws-be/app/integrations/: todo_repo.py
kdx-ws-be/app/middleware/: __init__.py  access_log.py
kdx-ws-be/app/models/: __init__.py  access_log.py
kdx-ws-be/app/repositories/: __init__.py  access_log_repo.py
kdx-ws-be/app/schemas/: face.py  todo.py
kdx-ws-be/app/services/: face_service.py  todo_service.py
kdx-ws-be/app/utils/: assemblyai_stt.py  cartesia_tts.py  event.py  merge_things.py
kdx-ws-be/app/ws/: voice_agent.py  voice_agent_langchain.py
kdx-ws-be/scripts/: download_insightface_models.py
scripts/: init-server.sh
(+21 files in other folders)
