[project]
name = "kdemo-fastapi"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn==0.34.0",
  "python-dotenv==1.0.1",
  "PyJWT==2.9.0",
  "redis==5.2.1",
  "PyMySQL==1.1.1",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
