[project]
name = "kdx-be"
version = "1.0.0"
description = "KDX Backend API"
requires-python = ">=3.10, <3.13"
dependencies = [
    "boto3>=1.43.13",
    "celery>=5.6.3",
    "django>=5.2.14",
    "django-celery-results>=2.6.0",
    "django-environ>=0.13.0",
    "django-redis>=6.0.0",
    "django-storages>=1.14.6",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "drf-spectacular-sidecar>=2026.5.1",
    "insightface>=0.7.3",
    "kubernetes>=36.0.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.2",
    "mysqlclient>=2.2.8",
    "onnxruntime>=1.24.3",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "requests>=2.34.2",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.uv.sources.pypi]
url = "https://mirrors.aliyun.com/pypi/simple/"
