[project]
name = "kdx-ws-be"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn==0.34.0",
  "python-dotenv==1.0.1",
  "PyJWT==2.9.0",
  "redis==5.2.1",
  "PyMySQL==1.1.1",
  "websockets>=12,<14",
  "langchain-openai>=0.2,<0.4",
  "langchain-core>=0.3,<0.4",
  "langgraph>=0.2,<0.4",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
