[project]
name = "kdx-ws-be"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "insightface>=0.7",
  "fastapi==0.115.12",
  "uvicorn==0.34.0",
  "python-dotenv==1.0.1",
  "PyJWT==2.9.0",
  "redis==5.2.1",
  "PyMySQL==1.1.1",
  "websockets>=12,<14",
  "langchain-openai>=0.2,<0.4",
  "langchain-core>=0.3,<0.4",
  "langgraph>=0.2,<0.4",
  "loguru>=0.7.3",
  "python-multipart>=0.0.29",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.uv.sources.pypi]
url = "https://mirrors.aliyun.com/pypi/simple/"
